--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 beautifulsoup4==4.4.1
 flake8==2.4.0
 Flask==0.10.1
+Flask-Compress==1.3.0
 Flask-HTTPAuth==2.4.0
 genres==1.2.2
 itsdangerous==0.24
