change for python2 to python3

--- a/tasks/files/000-default.conf
+++ b/tasks/files/000-default.conf
@@ -1,14 +1,14 @@
 <VirtualHost *:80>
         ServerAdmin adam@adamyala.com
 
-        # DocumentRoot /var/www/normalize_events
-        # <Directory />
-        #         Options FollowSymLinks
-        #         AllowOverride None
-        # </Directory>
+        DocumentRoot /var/www/normalize_events
+        <Directory />
+                Options FollowSymLinks
+                AllowOverride None
+        </Directory>
 
         WSGIPassAuthorization On
-        WSGIScriptAlias /api /var/www/normalize_events/normalize_events.wsgi
+        WSGIScriptAlias / /var/www/normalize_events/normalize_events.wsgi
         <Directory /var/www/normalize_events/normalize_events/>
                 Order allow,deny
                 Allow from all
