--- a/tasks/local.yml
+++ b/tasks/local.yml
@@ -7,6 +7,7 @@
     installed_dir: "/var/www/{{ project_name }}"
     repo: git@github.com:adamyala/normalize_events.git
     branch: devops
+    psql_password: NULL
 
   tasks: 
   - name: update package cache and upgrade packages
@@ -22,9 +23,9 @@
       state: latest
     with_items:
       - apache2
-      - libapache2-mod-wsgi
+      - libapache2-mod-wsgi-py3
       - git
-      - python-dev
+      - python3-dev
       - python-pip
       - postgresql
       - python-psycopg2
@@ -49,6 +50,7 @@
 
   - name: install virtualenv
     pip:
+      virtualenv_python: python3
       name: virtualenv
       state: latest
     become: true
@@ -56,15 +58,32 @@
 
   - name: install dependancies
     pip:
+      virtualenv_python: python3
       virtualenv: "{{ installed_dir }}/venv/bin/python"
       requirements: "{{ installed_dir }}/requirements.txt"
     become: true
     become_user: root
 
+  - name: make events database
+    postgresql_db:
+      name: events
+    become: true
+    become_user: postgres
+
+  - name: make www-data postgresql user
+    postgresql_user:
+      db: events
+      name: www-data
+      password: "{{ psql_password }}"
+      priv: ALL
+    become: true
+    become_user: postgres
+
   - name: copy apache config
     template: src=files/000-default.conf dest=/etc/apache2/sites-available/000-default.conf
     become: true
     become_user: root
+    notify: restart apache
 
   handlers:
     - name: restart apache
