--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ normalize_events/__pycache__/
 normalize_events/lib/__pycache__/
 normalize_events/lib/category_lib/__pycache__/
 normalize_events/lib/feeds/__pycache__/
+.vagrant/
