--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,9 @@ mccabe==0.3
 pep8==1.5.7
 psycopg2==2.6.1
 pyflakes==0.8.1
+python-dateutil==2.5.3
 requests==2.5.1
+six==1.10.0
 SQLAlchemy==0.9.8
 urllib3==1.10.2
 Werkzeug==0.10.1
