--- a/tasks/local.yml
+++ b/tasks/local.yml
@@ -73,7 +73,8 @@
       db: events
       name: "{{ item }}"
       password: "{{ psql_password }}"
-      priv: ALL/ALL
+      priv: ALL
+      state: present
     with_items:
       - "{{ remote_user }}"
       - www-data
